Fix crash in atspi_deregister_keystroke_listener

Atspi_registry_keystroke_listener has code to copy a keyset before passing
to dbind, in order to handle NULL keystrings, but this code was not present
in atspi_deregister_keystroke_listener.

https://bugs.freedesktop.org/show_bug.cgi?id=50578